# premier-league

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  upload_events_to_s3.py
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  fpl_snapshot.yml  understat_snapshot.yml
.streamlit/: config.toml
airflow_dag/: pipeline_dag.py
app/: db.py  home.py  leaderboard.py  league_table.py  live.py  my_team.py  player_stats.py  streamlit_app.py  transfer_decisions.py  ui.py  xg_analytics.py
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/mapping/: player_id_map.sql  player_id_map_understat.sql  schema.yml
dbt/models/marts/: mart_league_table.sql  mart_player_availability_risk.sql  mart_player_form_trend.sql  (+6 more)
dbt/seeds/: schema.yml  seed_player_map_overrides_understat.csv
dbt/tests/: assert_league_table_goals_balance.sql  assert_mart_team_defensive_outlook_grain_is_unique.sql  assert_mart_transfer_decision_grain_is_unique.sql  assert_stg_fpl_players_grain_is_unique.sql  assert_stg_understat_matches_grain_is_unique.sql  assert_stg_understat_players_grain_is_unique.sql  assert_understat_goals_consistent_across_files.sql  assert_whoscored_goal_events_match_scores.sql  assert_whoscored_understat_goals_reconcile.sql
docs/: architecture.md  decision_log.md
scripts/: events_upload.py  fpl_snapshot.py  load_raw.py  matches_upload.py  understat_snapshot.py
sql/: 00_bootstrap.sql
tests/: conftest.py  test_fpl_snapshot.py  test_load_raw.py  test_understat_snapshot.py
(+12 files in other folders)
