[project]
name = "fpl-data-platform"
version = "0.1.0"
description = "FPL data platform: scheduled snapshots + proprietary event data -> DuckDB/MotherDuck -> transfer decision layer"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "streamlit>=1.38",
    "pandas>=2.2",
    "duckdb>=1.1",
    "dbt-core>=1.8",
    "dbt-duckdb>=1.8",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
